[gd_scene load_steps=15 format=2]

[ext_resource path="res://Root.gd" type="Script" id=1]
[ext_resource path="res://components/Card/Card.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/fonts/Pacifico-200px.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/fonts/RobotoLight-24px.tres" type="DynamicFont" id=4]
[ext_resource path="res://components/Spinner/Spinner.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/fonts/RoundedpixelRegular-53P8.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://components/Button/Button.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/textures/Refresh.svg" type="Texture" id=8]
[ext_resource path="res://components/LobbyEntry/LobbyEntry.tscn" type="PackedScene" id=9]
[ext_resource path="res://components/TextInput/TextInput.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.917647, 0.929412, 0.913725, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 16

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.85098, 0.85098, 0.85098, 1 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 6 )

[node name="Root" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lobbies" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Lobbies"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.882353, 0.882353, 0.882353, 1 )

[node name="List" parent="Lobbies" instance=ExtResource( 2 )]
margin_bottom = -101.0
custom_styles/panel = SubResource( 1 )

[node name="GameTitle" type="Label" parent="Lobbies/List"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -86.5
margin_right = 434.0
margin_bottom = 265.5
rect_rotation = -7.4172
rect_pivot_offset = Vector2( 280, 176 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.443137, 0.443137, 1 )
text = "Little war ground"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Lobbies/List"]
margin_left = 20.0
margin_top = 10.0
margin_right = 96.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lobbies"

[node name="Spinner" parent="Lobbies/List" instance=ExtResource( 5 )]

[node name="LobbyEntry" parent="Lobbies/List" instance=ExtResource( 9 )]
custom_styles/panel = SubResource( 2 )

[node name="Entries" type="Control" parent="Lobbies/List"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.56827
margin_right = 1.5683

[node name="Refresh" parent="Lobbies/List" instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -28.0
margin_top = -69.0
margin_right = 28.0
margin_bottom = -13.0005
rect_pivot_offset = Vector2( 28, 28 )
texture = ExtResource( 8 )

[node name="Host" parent="Lobbies" instance=ExtResource( 2 )]
anchor_top = 1.0
margin_top = -88.0
custom_styles/panel = SubResource( 1 )

[node name="Name" parent="Lobbies/Host" instance=ExtResource( 10 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -25.0
margin_right = 350.0
margin_bottom = 25.0
custom_styles/panel = SubResource( 3 )
placeholder_text = "Lobby name..."

[node name="Host" parent="Lobbies/Host" instance=ExtResource( 7 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -172.0
margin_top = -28.0
margin_right = -18.0
margin_bottom = 28.0
text = "Host"

[node name="RandomName" parent="Lobbies/Host" instance=ExtResource( 7 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -422.0
margin_top = -28.0
margin_right = -182.0
margin_bottom = 28.0
text = "Random Name"

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 248.0
margin_top = 264.0
margin_right = 542.0
margin_bottom = 295.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Waiting for player..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spinner" parent="Label" instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 1 )
margin_left = -51.0
margin_top = 24.5
margin_right = 25.0
margin_bottom = 100.5

[connection signal="selected" from="Lobbies/List/LobbyEntry" to="." method="_on_LobbyEntry_selected"]
[connection signal="clicked" from="Lobbies/List/Refresh" to="." method="_on_Refresh_clicked"]
[connection signal="clicked" from="Lobbies/Host/Host" to="." method="_on_Host_clicked"]
[connection signal="clicked" from="Lobbies/Host/RandomName" to="Lobbies/Host/Name" method="_on_RandomName_clicked"]
